tests/snapshots/yaml_suite_snapshots__yaml_suite_TS54_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ">\n  ab cd\n\n  ef\n\n\n  gh\n"
  from: NimYAML tests
  json: "\"ab cd\\nef\\n\\ngh\\n\"\n"
  name: Folded Block Scalar
  tags: folded scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL >ab cd\\nef\\n\\ngh\\n\n -DOC\n-STR\n"
  yaml: ">\n ab\n cd\n␣\n ef\n\n\n gh\n"
