tests/snapshots/yaml_suite_snapshots__yaml_suite_U3C3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 6.16. “TAG” directive
  from: "http://www.yaml.org/spec/1.2/spec.html#id2782252"
  tags: spec header tag
  yaml: "%TAG !yaml! tag:yaml.org,2002:\n---\n!yaml!str \"foo\"\n"
  tree: "+STR\n +DOC ---\n  =VAL <tag:yaml.org,2002:str> \"foo\n -DOC\n-STR\n"
  json: "\"foo\"\n"
  dump: "--- !!str \"foo\"\n"
