tests/snapshots/yaml_suite_snapshots__yaml_suite_U3XV_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\ntop1: &node1\n  &k1 key1: one\ntop2: &node2\n  key2: two\ntop3:\n  &k3 key3: three\ntop4: &node4\n  &k4 key4: four\ntop5: &node5\n  key5: five\ntop6: &val6 six\ntop7: &val7 seven\n"
  from: "@perlpunk"
  json: "{\n  \"top1\": {\n    \"key1\": \"one\"\n  },\n  \"top2\": {\n    \"key2\": \"two\"\n  },\n  \"top3\": {\n    \"key3\": \"three\"\n  },\n  \"top4\": {\n    \"key4\": \"four\"\n  },\n  \"top5\": {\n    \"key5\": \"five\"\n  },\n  \"top6\": \"six\",\n  \"top7\": \"seven\"\n}\n"
  name: Node and Mapping Key Anchors
  tags: anchor comment 1.3-err
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :top1\n   +MAP &node1\n    =VAL &k1 :key1\n    =VAL :one\n   -MAP\n   =VAL :top2\n   +MAP &node2\n    =VAL :key2\n    =VAL :two\n   -MAP\n   =VAL :top3\n   +MAP\n    =VAL &k3 :key3\n    =VAL :three\n   -MAP\n   =VAL :top4\n   +MAP &node4\n    =VAL &k4 :key4\n    =VAL :four\n   -MAP\n   =VAL :top5\n   +MAP &node5\n    =VAL :key5\n    =VAL :five\n   -MAP\n   =VAL :top6\n   =VAL &val6 :six\n   =VAL :top7\n   =VAL &val7 :seven\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\ntop1: &node1\n  &k1 key1: one\ntop2: &node2 # comment\n  key2: two\ntop3:\n  &k3 key3: three\ntop4:\n  &node4\n  &k4 key4: four\ntop5:\n  &node5\n  key5: five\ntop6: &val6\n  six\ntop7:\n  &val7 seven\n"
