tests/snapshots/yaml_suite_snapshots__yaml_suite_U44R_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Bad indentation in mapping (2)
  from: "@perlpunk"
  tags: error mapping indent double
  fail: true
  yaml: "map:\n  key1: \"quoted1\"\n   key2: \"bad indentation\"\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :map\n   +MAP\n    =VAL :key1\n    =VAL \"quoted1\n"
